; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sound/pci/extr_spicds.c_spicds_settype.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sound/pci/extr_spicds.c_spicds_settype.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spicds_info = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @spicds_settype(%struct.spicds_info* %0, i32 %1) #0 {
  %3 = alloca %struct.spicds_info*, align 8
  %4 = alloca i32, align 4
  store %struct.spicds_info* %0, %struct.spicds_info** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.spicds_info*, %struct.spicds_info** %3, align 8
  %6 = getelementptr inbounds %struct.spicds_info, %struct.spicds_info* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @snd_mtxlock(i32 %7)
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.spicds_info*, %struct.spicds_info** %3, align 8
  %11 = getelementptr inbounds %struct.spicds_info, %struct.spicds_info* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 4
  %12 = load %struct.spicds_info*, %struct.spicds_info** %3, align 8
  %13 = getelementptr inbounds %struct.spicds_info, %struct.spicds_info* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @snd_mtxunlock(i32 %14)
  ret void
}

declare dso_local i32 @snd_mtxlock(i32) #1

declare dso_local i32 @snd_mtxunlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
